WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60698
Regression(R84125): Broke GTK build
https://bugs.webkit.org/show_bug.cgi?id=60698
Summary
Regression(R84125): Broke GTK build
Sujin Park
Reported
2011-05-12 06:34:42 PDT
When I build without javascript-debugger, build break occurs like below. ../../Source/JavaScriptCore/wtf/OwnPtrCommon.h: In function ‘void WTF::deleteOwnedPtr(T*) [with T = WebCore::InspectorDebuggerAgent]’: ../../Source/JavaScriptCore/wtf/OwnPtr.h:54: instantiated from ‘WTF::OwnPtr<T>::~OwnPtr() [with T = WebCore::InspectorDebuggerAgent]’ ../../Source/WebCore/inspector/WorkerInspectorController.cpp:79: instantiated from here ../../Source/JavaScriptCore/wtf/OwnPtrCommon.h:57: error: invalid application of ‘sizeof’ to incomplete type ‘WebCore::InspectorDebuggerAgent’ ../../Source/JavaScriptCore/wtf/OwnPtrCommon.h:57: error: creating array with negative size (‘-0x00000000000000001’) ../../Source/JavaScriptCore/wtf/OwnPtrCommon.h:59: warning: possible problem detected in invocation of delete operator: ../../Source/JavaScriptCore/wtf/OwnPtrCommon.h:55: warning: ‘ptr’ has incomplete type ../../Source/WebCore/inspector/WorkerInspectorController.h:44: warning: forward declaration of ‘struct WebCore::InspectorDebuggerAgent’ ../../Source/JavaScriptCore/wtf/OwnPtrCommon.h:59: note: neither the destructor nor the class-specific operator delete will be called, even if they are declared when the class is defined. make[1]: *** [Source/WebCore/inspector/libWebCore_la-WorkerInspectorController.lo] 오류 1
Attachments
Patch
(1.60 KB, patch)
2011-05-12 06:58 PDT
,
Sujin Park
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sujin Park
Comment 1
2011-05-12 06:58:59 PDT
Created
attachment 93282
[details]
Patch
WebKit Commit Bot
Comment 2
2011-05-27 06:51:15 PDT
Comment on
attachment 93282
[details]
Patch Clearing flags on attachment: 93282 Committed
r87507
: <
http://trac.webkit.org/changeset/87507
>
WebKit Commit Bot
Comment 3
2011-05-27 06:51:19 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug