2011-05-27  Sujin Park  <sujjin.park@gmail.com>

Unreviewed, buildfix if --no-javascript-debugger.

        Regression(R84125): Broke GTK build
        https://bugs.webkit.org/show_bug.cgi?id=60698

        No new tests since this doesn't change any behavior.

        * inspector/WorkerInspectorController.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@87507 bbb929c8-8fbe-4397-9dbb-9b2b20218538