third_party/WebKit/Source/WebCore/inspector/WorkerInspectorController.h
@@ -43,7 +43,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 namespace WebCore {
 
 class InjectedScriptManager;
+#if ENABLE(JAVASCRIPT_DEBUGGER)
 class InspectorDebuggerAgent;
+#endif
 class InspectorBackendDispatcher;
 class InspectorFrontend;
 class InspectorFrontendChannel;
@@ -69,7 +71,9 @@ private:
     OwnPtr<InspectorState> m_state;
     OwnPtr<InstrumentingAgents> m_instrumentingAgents;
     OwnPtr<InjectedScriptManager> m_injectedScriptManager;
+#if ENABLE(JAVASCRIPT_DEBUGGER)
     OwnPtr<InspectorDebuggerAgent> m_debuggerAgent;
+#endif
     OwnPtr<InspectorRuntimeAgent> m_runtimeAgent;
 
     OwnPtr<InspectorFrontendChannel> m_frontendChannel;
